--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - UMASK_SET=022 #optional
       #- TRANSMISSION_WEB_HOME=/combustion-release/ #optional
       - USER=admin
-      - PASS=ed6433@@
+      - PASS=senha
       #- WHITELIST=iplist #optional
       #- PEERPORT=peerport #optional
       #- HOST_WHITELIST=dnsnane list #optional
